# olmo

./: .editorconfig  .gitignore  array.c  array.h  error.h  flag.h  init.c  lexer.c  lexer.h  main.c  meson.build  repl.h  sourcemgr.c  sourcemgr.h  table.c  table.h  token.h  utils.c  utils.h
examples/: conditions.ct  functions.ct  literals.om  operators.ct  types.om  variables.ct
test/: lexer.c  main.c  table.c  test.h
